# lrn

./: .gitignore  Dockerfile  README.md  SAMPLE_MESSAGES.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  seed.py
.github/workflows/: run-tests.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 98b1f4dc6772_init.py  c3d4e5f6a7b8_add_improved_average_score.py
lrn/: config.py  errors.py  llm.py  main.py  prompts.py  review.py  state.py
lrn/models/: __init__.py  dashboard.py  db_models.py  process.py  prompts.py  samples.py
lrn/routes/: __init__.py  dashboard.py  process.py  prompts.py  samples.py
lrn/static/: dashboard.html
tests/: conftest.py  test_dashboard.py  test_process.py  test_prompts.py  test_review.py  test_samples.py
