[tool.poetry]
name = "lrn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.124.4"}
sqlmodel = "^0.0.27"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
google-genai = "^2.12.1"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.9"
pylint = "^4.0.4"
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["*.py"]
line-length = 88
indent-width = 4
fix = true
target-version = "py310"


[tool.pytest.ini_options]
addopts = "--cov=lrn --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]

